Closed
Bug 163811
Opened 23 years ago
Closed 23 years ago
autocomplete gets in the way of some urls.
Categories
(Camino Graveyard :: Location Bar & Autocomplete, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Chimera0.6
People
(Reporter: mozilla.org, Assigned: mikepinkerton)
Details
often i'll find that after i've visited a site, and go to type a url in, chimera
will try to pick one for me when i don't want it.
say i'm trying to reach www.example.com/bob/, but recently i've already been to
www.example.com/bob/bib/, chimera won't let me get to /bob/ only, and will go to
bob/bib/ instead. this seems to only happen when i've already visited a url in
that window - opening a new window and quickly typing www.example.com/bob/ will
work.
Updated•23 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 1•23 years ago
|
||
Chimera needs to stop interpreting carriage return as a confirmation for an
autocomplete suggestion. Entering a complete URL and pressing return needs to
work consistently whether or not URL autocomplete is suggesting an URL.
URL autocomplete should, first and foremost, be a visual aid in the URL typing
process. Users can additionally pick suggested alternatives using <tab>, arrow
keys or the mouse. The current implementation requires explicit knowledge of the
autocomplete mechanism to enter some URLs. I want to be able to enter addresses
onto the URL bar with my eyes closed; currently it is not possible.
Comment 2•23 years ago
|
||
->autocomplete
Assignee: saari → pinkerton
Component: General → URL Bar & Autocomplete
QA Contact: winnie → sairuh
Comment 3•23 years ago
|
||
A slight variation of this that happens occasionally (to me at least):
Type the url www.berlingske.dk, load the page
Now edit the url by highlighting "berlingske" and type "comon" (resulting in
www.comon.dk). When the problem occurs I will get www.berlingske.dk refreshed
(and my typing removed from the url line).
This does not (visibly) involve autocompletion.
Build: 2002090405
Comment 4•23 years ago
|
||
This is really annoying. The autocomplete popup window grabs the 'return' key
and loads its selected URL, rather than using the url bar contents.
Comment 5•23 years ago
|
||
Definitely agreed with Simon's comment 4. This can make browsing very
frustrating. Chimera needs to do one of two things to fix this:
1. Require the user to explicitly accept the autocomplete suggestion before
using it (ie. by hitting the down arrow and the enter; or by pressing tab to
transfer the suggestion up into the url bar and move the cursor to the end of
it; or by clicking in the autocomplete area).
or 2. If Chimera is not going to require the user to explicitly accept the
suggestion, then at least it needs to offer the user a way of refusing it. For
example, on other browsers which use the "default to accept" mode such as
certain versions of IE, the autocomplete suggestion actually appears in the URL
bar itself as the user types; the suggested portion of the URL remains
highlighted so that any new typing will replace it; if the user wants to accept
he/she can just press return; if the user wants to reject he/she can press
backspace and the highlight/suggested segment will disappear and then pressing
return will load the URL as shown.
Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Chimera0.6
Assignee | ||
Comment 6•23 years ago
|
||
just noticed this, and it's waaay annoying.
Assignee | ||
Comment 7•23 years ago
|
||
fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 8•23 years ago
|
||
vrfy'd fixed --no longer happens with 2002.09.20.04. huzzah!
Status: RESOLVED → VERIFIED
Comment 9•23 years ago
|
||
I think this bug still lingers on in the 2002092004 build.
There are situations where you will type a URL in the address bar and the
autocomplete popup will NOT appear, but nonetheless when you hit return you will
find an unwanted (and unseen) "suggestion" pop itself into the bar and prevent
you from accessing the URL you want.
I am trying to work out how to reproduce this one, and will post again if I can
come up with some steps to reliably do it.
This case is particular because the autocomplete suggestions do not appear at all!
You need to log in
before you can comment on or make changes to this bug.
Description
•