when hitting backspace, clear the autocomplete table selection so that it doesn't get replaced when hitting return (bug 163811)